# small-cpp-utils

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-test.yml  codacy.yml  codeql.yml  linux-build.yml  msvc.yml  sonarqube.yml
examples/: examples_base64.h  examples_buffer.h  examples_common.h  examples_event.h  examples_event_queue.h  examples_group_queue.h  examples_hash.h  examples_jobs_engine.h  examples_lock_queue.h  examples_lru_cache.h  examples_prio_queue.h  examples_spinlock.h  examples_stack_string.h  examples_time_queue.h  examples_util.h  examples_util_timeout.h  examples_worker_threads.h
include/: base64.h  base_lock.h  base_queue_wait.h  base_wait_pop.h  buffer.h  critical_section.h  event.h  event_queue.h  group_queue.h  hash.h  jobs_config.h  jobs_engine.h  jobs_engine_scheduler.h  jobs_engine_thread_pool.h  jobs_item.h  jobs_queue.h  lock.h  lock_queue.h  lock_queue_thread.h  lru_cache.h  prio_queue.h  small_cpp_utils.h  spinlock.h  stack_string.h  time_queue.h  time_queue_thread.h  util.h  util_rand.h  util_str.h  util_time.h  util_timeout.h  util_uuid.h  worker_thread.h
include/impl/: base64_impl.h  base_buffer_impl.h  base_lock_impl.h  impl_common.h  jobs_engine_thread_pool_impl.h  jobs_item_impl.h  jobs_queue_impl.h  jobs_state_impl.h  jobs_thread_pool_impl.h  util_str_impl.h  util_timeout_impl.h
tests/: base64.cc  base64.cpp  buffer.cpp  hash.cc  spinlock.cc  test_base64.cpp  test_buffer.cpp  test_common.h  test_event.cpp  test_event_queue.cpp  test_group_queue.cpp  test_hash.cpp  test_jobs_engine.cpp  test_jobs_queue.cpp  test_lock_queue.cpp  test_lru_cache.cpp  test_prio_queue.cpp  test_spinlock.cpp  test_stack_string.cpp  test_time_queue.cpp  test_util.cpp  test_util_set_timeout.cpp  test_worker_thread.cpp  util.cc
workflows/: windows-build.yml
